--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
         <div class="inner">
             <!-- Блок для Кофе -->
             <div class="item">
-                <img src="images/coffee.png" alt="Кофе" class="img">
+                <img src="coffee.png" alt="Кофе" class="img">
                 <button class="btn" id="btn1">Кофе</button>
             </div>
             <!-- Блок для Чая -->
             <div class="item">
-                <img src="images/tea.png" alt="Чай" class="img">
+                <img src="tea.png" alt="Чай" class="img">
                 <button class="btn" id="btn2">Чай</button>
             </div>
             <!-- Блок для Сока -->
             <div class="item">
-                <img src="images/juice.png" alt="Сок" class="img">
+                <img src="juice.png" alt="Сок" class="img">
                 <button class="btn" id="btn3">Сок</button>
             </div>
             <!-- Блок для Лимонада -->
             <div class="item">
-                <img src="images/lemonade.png" alt="Лимонад" class="img">
+                <img src="lemonade.png" alt="Лимонад" class="img">
                 <button class="btn" id="btn4">Лимонад</button>
             </div>
         </div>
